# inastitch

./: CMakeLists.txt  README.md  inartpsend.cpp  inastitch.cpp  main.cpp
cmake/: version.cpp.in
inastitch/jpeg/include/: Decoder.hpp  Encoder.hpp  MjpegParser.hpp  MjpegParserAsync.hpp  MjpegParserWithPts.hpp  RtpJpegEncoder.hpp  RtpJpegParser.hpp
inastitch/jpeg/src/: Decoder.cpp  Encoder.cpp  MjpegParser.cpp  MjpegParserAsync.cpp  MjpegParserWithPts.cpp  RtpJpegEncoder.cpp  RtpJpegParser.cpp
inastitch/json/include/: Matrix.hpp
inastitch/json/src/: Matrix.cpp
inastitch/opencv/include/: HomographyMatrix.hpp
inastitch/opencv/src/: HomographyMatrix.cpp
inastitch/opengl/include/: OpenGlHelper.hpp
inastitch/opengl/src/: OpenGlHelper.cpp  OpenGlTextHelper.cpp
include/: version.h
include/libav/libavcodec/: bytestream.h  jpegtables.c  jpegtables.h  mjpeg.h
include/libav/libavformat/: rtpdec_jpeg.c
include/libav/libavutil/: attributes.h  bswap.h  intreadwrite.h
static/: inastitch_matrix.json
tools/calibration/: CMakeLists.txt  inastitch_cal_detailed.cpp  main.cpp
tools/tensorflow/: CMakeLists.txt  README.md  main.cpp
